[package]
name = "mono"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8.9"
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6.8", features = ["fs", "trace", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = "0.4"
bdays = "0.1"
cached = "0.59.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1"
dotenv = "0.15.0"
tera = "1"

[dev-dependencies]
axum-test = "20.0.0"
