[package]
name = "common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
ring.workspace = true
hex.workspace = true
base64.workspace = true
sqlx.workspace = true
chrono.workspace = true
lazy_static.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
dotenv.workspace = true
