[package]
name = "mono"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
common.workspace = true
spot.workspace = true
paste.workspace = true
tokio.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
bdays.workspace = true
cached.workspace = true
serde.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
dotenv.workspace = true
tera.workspace = true
anyhow.workspace = true
sqlx.workspace = true
reqwest.workspace = true

[dev-dependencies]
axum-test = "20.0.0"
