[package]
name = "paste"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
common.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tera.workspace = true
anyhow.workspace = true
sqlx.workspace = true
base64.workspace = true
rand.workspace = true
rmp-serde.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true

[dev-dependencies]
axum-test.workspace = true
tokio.workspace = true

