[package]
name = "spot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
common.workspace = true
sqlx.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
base64.workspace = true
hex.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true
axum.workspace = true
axum-extra.workspace = true
time.workspace = true
async-trait.workspace = true
lazy_static.workspace = true
dotenv.workspace = true
